az-kube/customer-internal-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: customer-lb
  labels:
    service: customers
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: customer-service
