az-kube/customer-public-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: customers-public
  # annotations:
    # service.beta.kubernetes.io/azure-load-balancer-ipv4: 10.240.0.25
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: customer-service
