az-kube/ecom-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-ingress
  labels:
    app: ecom-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /customers(/|$)(.*)
            backend:
              service:
                name: customer-lb
                port:
                  number: 80
            pathType: Prefix
